--- a/index.html
+++ b/index.html
@@ -14,7 +14,65 @@
   </head>
   <body>
 
-    <h1>This is new website</h1>
+    <!-- header area start heere -->
+    <header>
+
+      <!-- Navabar are start here -->
+      <nav class="navbar navbar-expand-lg py-4">
+        <div class="container">
+          <a class="navbar-brand fw-bold fs-3" href="#">Pro Coder Hub</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active me-2" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item me-2">
+                <a class="nav-link" href="#">Courses</a>
+              </li>
+              <li class="nav-item me-2">
+                <a class="nav-link" href="#">Deals</a>
+              </li>
+              <li class="nav-item me-2">
+                <a class="nav-link" href="#">Success</a>
+              </li>
+              <li class="nav-item me-2">
+                <a class="nav-link" href="#">About</a>
+              </li>
+            </ul>
+            <form class="d-flex d-none d-md-block " role="search">
+              <button class="btn btn-outline-info px-4" type="submit">Register</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+
+      <!-- Slider Section start from here -->
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner ">
+          <div class="carousel-item active">
+            <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+    </header>
 
     <!-- Boostrap Javascript here -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
