Slider section added

--- a/index.html
+++ b/index.html
@@ -50,28 +50,44 @@
       </nav>
 
       <!-- Slider Section start from here -->
-      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner ">
-          <div class="carousel-item active">
+      <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="10000">
             <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+            <div class="carousel-caption text-white ">
+              <h1>Discover a limitless world of learning</h1>
+              <p>Review important concepts and explore new topics—the options are endless with Education.com! Join for free today</p>
+              <a href="#" class="btn btn-info">Get Started</a>
+            </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-bs-interval="2000">
             <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption text-white">
+              <h1>Our learning library</h1>
+              <p>With 30,000+ digital and printable resources, kids can learn about any topic they’re curious about.
+              </p>
+              <a href="#" class="btn btn-info">Get Started</a>
+            </div>
           </div>
           <div class="carousel-item">
             <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption text-white">
+              <h1>Boundless potential unlimited access</h1>
+              <p>Unlock special features and access to everything Education.com offers with a Premium membership.
+              </p>
+              <a href="#" class="btn btn-info">Get Started</a>
+            </div>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-
     </header>
 
     <!-- Boostrap Javascript here -->
