Popular courses area added

--- a/index.html
+++ b/index.html
@@ -92,7 +92,107 @@
 
     <!-- main area start form heere -->
     <main>
-      
+      <!-- Popular courses section start form here -->
+      <section class="my-5">
+        <div class="container">
+          <div class="top-content p-5 text-center w-60 m-auto">
+            <h1>Discover Our Popular Courses</h1>
+            <p>Unlock special features and access to everything Education.com offers with a Premium membership.</p>
+          </div>
+
+        <div class="row g-4">
+          
+          <div class="col-lg-6 col-12">
+            <div class="main-content d-flex align-items-center border rounded p-4">
+              <div class="course-image">
+                <img class="img-fluid" src="./images/course/course-1.png" alt="">
+              </div>
+              <div class="content ms-4 ">
+                <h4>Javascript Basic to advanced</h4>
+                <p>Our easy-to-use, comprehensive, and secure supplemental digital learning program empowers administrators</p>
+                <h5>Price: $20</h5>
+              </div>
+            </div>  
+          </div>   
+
+          <div class="col-lg-6 col-12">
+            <div class="main-content d-flex align-items-center border rounded p-4">
+              <div class="course-image">
+                <img class="img-fluid" src="./images/course/course-2.png" alt="">
+              </div>
+              <div class="content ms-4 ">
+                <h4>Fullstack Web Development</h4>
+                <p>Teachers to help PreK-8 students build essential skills and excel in math and reading.
+                </p>
+                <h5>Price: $70</h5>
+              </div>
+            </div>  
+          </div>  
+
+          <div class="col-lg-6 col-12">
+            <div class="main-content d-flex align-items-center border rounded p-4">
+              <div class="course-image">
+                <img class="img-fluid" src="./images/course/course-3.png" alt="">
+              </div>
+              <div class="content ms-4 ">
+                <h4>Digital Marketing</h4>
+                <p>Digital marketing, also called online marketing, is the promotion of brands to connect with potential customers using the internet </p>
+                <h5>Price: $60</h5>
+              </div>
+            </div>  
+          </div>  
+
+
+          <div class="col-lg-6 col-12">
+            <div class="main-content d-flex align-items-center border rounded p-4">
+              <div class="course-image">
+                <img class="img-fluid" src="./images/course/course-4.png" alt="">
+              </div>
+              <div class="content ms-4 ">
+                <h4>Digital Marketing</h4>
+                <p>Digital marketing, also called online marketing, is the promotion of brands to connect with potential customers using the internet </p>
+                <h5>Price: $60</h5>
+              </div>
+            </div>  
+          </div>  
+
+          <div class="col-lg-6 col-12">
+            <div class="main-content d-flex align-items-center border rounded p-4">
+              <div class="course-image">
+                <img class="img-fluid" src="./images/course/course-5.png" alt="">
+              </div>
+              <div class="content ms-4 ">
+                <h4>Photography Basic Rules</h4>
+                <p>
+                  Image result for photography basic rules The golden ratio is a ratio of approximately 1.618 to 1.</p>
+                <h5>Price: $20</h5>
+              </div>
+            </div>  
+          </div>  
+
+          <div class="col-lg-6 col-12">
+            <div class="main-content d-flex align-items-center border rounded p-4">
+              <div class="course-image">
+                <img class="img-fluid" src="./images/course/course-6.png" alt="">
+              </div>
+              <div class="content ms-4 ">
+                <h4>Motion Graphics</h4>
+                <p>Motion graphics are pieces of animation or digital footage which create the illusion of motion or rotation,</p>
+                <h5>Price: $30</h5>
+              </div>
+            </div>  
+          </div>  
+        </div>
+
+        <div class="more-courses text-center my-5">
+          <a href="#" class="btn btn-info px-4 text-white">See More Courses</a>
+        </div>
+        </div>
+      </section>
+
+
+
+
     </main>
     <!-- Boostrap Javascript here -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
