Registration area added

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
         <div class="row g-4">
           
           <div class="col-lg-6 col-12">
-            <div class="main-content d-flex align-items-center border rounded p-4">
+            <div class="main-content d-flex align-items-center border rounded p-4 flex-md-row flex-column">
               <div class="course-image">
-                <img class="img-fluid" src="./images/course/course-1.png" alt="">
+                <img class="img-fluid " src="./images/course/course-1.png" alt="">
               </div>
               <div class="content ms-4 ">
                 <h4>Javascript Basic to advanced</h4>
@@ -116,7 +116,7 @@
           </div>   
 
           <div class="col-lg-6 col-12">
-            <div class="main-content d-flex align-items-center border rounded p-4">
+            <div class="main-content d-flex align-items-center border rounded p-4 flex-md-row flex-column">
               <div class="course-image">
                 <img class="img-fluid" src="./images/course/course-2.png" alt="">
               </div>
@@ -130,7 +130,7 @@
           </div>  
 
           <div class="col-lg-6 col-12">
-            <div class="main-content d-flex align-items-center border rounded p-4">
+            <div class="main-content d-flex align-items-center border rounded p-4 flex-md-row flex-column">
               <div class="course-image">
                 <img class="img-fluid" src="./images/course/course-3.png" alt="">
               </div>
@@ -144,7 +144,7 @@
 
 
           <div class="col-lg-6 col-12">
-            <div class="main-content d-flex align-items-center border rounded p-4">
+            <div class="main-content d-flex align-items-center border rounded p-4 flex-md-row flex-column">
               <div class="course-image">
                 <img class="img-fluid" src="./images/course/course-4.png" alt="">
               </div>
@@ -157,7 +157,7 @@
           </div>  
 
           <div class="col-lg-6 col-12">
-            <div class="main-content d-flex align-items-center border rounded p-4">
+            <div class="main-content d-flex align-items-center border rounded p-4 flex-md-row flex-column">
               <div class="course-image">
                 <img class="img-fluid" src="./images/course/course-5.png" alt="">
               </div>
@@ -171,7 +171,7 @@
           </div>  
 
           <div class="col-lg-6 col-12">
-            <div class="main-content d-flex align-items-center border rounded p-4">
+            <div class="main-content d-flex align-items-center border rounded p-4 flex-md-row flex-column">
               <div class="course-image">
                 <img class="img-fluid" src="./images/course/course-6.png" alt="">
               </div>
@@ -190,8 +190,52 @@
         </div>
       </section>
 
+      <!-- Elarning Institute start here -->
+      <section class="py-5">
+        <div class="container bg-light">
+          <div class="row d-flex align-items-center">
+            <div class="col-lg-6 col-12">
+              <img class="img-fluid" src="./images/working.png" alt="">
+            </div>
 
+            <div class="col-lg-6 col-12">
+              <div class="institute-content p-4">
+                <h1>Explore The elearning Institute</h1>
+                <p class="mt-4">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which....See More</p>
+                <div class="course-stats d-flex mt-4">
+                  <div class="stats-1 me-5">
+                    <h3>3.2k+</h3>
+                    <p>Online Course</p>
+                  </div>
+                  <div class="stats-1 ms-3">
+                    <h3>600+</h3>
+                    <p>Expert Member</p>
+                  </div>
+                </div>
+                <div class="rating mt-4">
+                  <h3>1k+</h3>
+                  <p>Rating & Review</p>
+                </div>
+                <a href="#" class="btn btn-info mt-5">Read More</a>
+              </div>
+            </div>
 
+          </div>
+        </div>
+      </section>
+
+      <!-- ready to join section -->
+      <section>
+        <div class="container join-area p-5 text-white rounded">
+          <div class="row">
+            <div class="col-12 text-center p-5">
+              <h1 class="mb-4">Ready to join?</h1>
+              <p class="mb-4">It is a long established fact that a reader will be distracted by the <br> readable content of a page when looking at its layout.</p>
+              <a href="#" class="btn btn-light text-primary px-5 py-3 fs-5 mt-4 btn-color">Registration</a>
+            </div>
+          </div>
+        </div>
+      </section>
 
     </main>
     <!-- Boostrap Javascript here -->
